--- a/MicroBlog.Web/edit.html
+++ b/MicroBlog.Web/edit.html
@@ -88,12 +88,15 @@
                                 Title: $('#title').val(),
                                 Content: $('.editor').html()
                             }
-                            
+
+                            console.log(sendInfo);
+
                             request = $.ajax({
                                 beforeSend: function(xhr) { xhr.setRequestHeader("Authorization", "Basic " + btoa("microblog" + ":" + "microblog")); },
                                 type: "PUT",
                                 url: "/api/" + id,
                                 dataType: "json",
+                                contentType: "application/json;charset=utf-8",
                                 success: function(msg) {
                                     if (msg) {
                                         window.location.replace('/view.html?id=' + id);
@@ -102,7 +105,7 @@
                                     }
                                 },
 
-                                data: sendInfo
+                                data: JSON.stringify(sendInfo)
                             });
 
                             // Callback handler that will be called on failure
