--- a/MicroBlog.Web/edit.html
+++ b/MicroBlog.Web/edit.html
@@ -20,7 +20,7 @@
 <body>
     <riot-blogpostform></riot-blogpostform>
 
-    <script type="riot/tag">
+<script type="riot/tag">
         <riot-blogpostform>
             <div class="container">
                 <form id="blogpostform">
@@ -36,6 +36,7 @@
                     </div>
                     <div>
                         <input type="submit" value="Update" />
+                        <a class="link" href="index.html">Home</a>
                     </div>
                 </form>
             </div>
