--- a/MicroBlog.Web/view.html
+++ b/MicroBlog.Web/view.html
@@ -21,7 +21,8 @@
         <riot-container>
             <div class="container">
                 <div class="row">
-                    <a class="editlink" href="edit.html?id={opts.data.id}">Edit</a>
+                    <a class="link" href="edit.html?id={opts.data.id}">Edit</a>
+                    <a class="link" href="index.html">Home</a>
                     <div class="blogheader"><h1>{ opts.data.title }</h1></div>
                     <raw content="{ opts.data.content }" />
                 </div>
