--- a/MicroBlog.Web/view.html
+++ b/MicroBlog.Web/view.html
@@ -17,7 +17,7 @@
 <body>
     <riot-container class="container"></riot-container>
 
-<script type="riot/tag">
+    <script type="riot/tag">
         <riot-container>
             <div class="container">
                 <div class="row">
@@ -78,5 +78,20 @@
         });
     </script>
 
+    <div class="container">
+        <div class="row">
+            <script id="echochamber">
+                var EchoChamber = window.EchoChamber || {};
+                (function () {
+                    EchoChamber.discussionURL = window.location;
+                    var script = document.createElement('script');
+                    script.src = 'https://s3.amazonaws.com/echochamberjs/dist/main.js';
+                    script.async = true;
+                    var entry = document.getElementById('echochamber');
+                    entry.parentNode.insertBefore(script, entry);
+                })();
+            </script>
+        </div>
+    </div>
 </body>
 </html>
