--- a/MicroBlog.React/index.html
+++ b/MicroBlog.React/index.html
@@ -6,7 +6,7 @@
     <script src="js/lib/react.js"></script>
     <script src="js/lib/JSXTransformer.js"></script>
 
-    <script type="text/jsx" src="test.js"></script>
+    <script type="text/jsx" src="blogItem.js"></script>
 
     <link rel="stylesheet" href="/css/bloglist.css">
 </head>
@@ -14,36 +14,29 @@
     <div id="blogs"></div>
 
     <script type="text/jsx">
-        var BlogItems = React.createClass({
-            getInitialState: function() {
-                return { data: 
-                    { id: 1, title: "Test Title 1", content: "Test Content 1" }
-                 };
-            },
-            render: function() {
-                return (
-                    <div className="row">
-                        <div className="blogheader"><a href={ 'view.html?id=' + this.state.data.id }><h1>{ this.state.data.title }</h1></a></div>
-                        <raw content="{ this.state.data.content }" />
-                    </div>
-                );
-            }
-        });
     
+        var data = [
+            { id: 1, title: "Test Title 1", content: "Test Content 1" },
+            { id: 2, title: "Test Title 2", content: "Test Content 2" }
+        ];
+
         React.render(
-            <div classname="row">
-                <div classname="col-md-8">
-                    <h1>My Blogs</h1>
+            <div>
+                <div className="row">
+                    <div className="col-md-8">
+                        <h1>My Blogs</h1>
+                    </div>
+                    <div className="col-md-4">
+                        <span className="createlink"><a href="create.html">Compose</a></span>
+                    </div>
                 </div>
-                <div classname="col-md-4">
-                    <span classname="createlink"><a href="create.html">Compose</a></span>
-                </div>
-                <BlogItems />
+                <BlogItems data={data}/>
             </div>,
+
             document.getElementById('blogs')
         );
-    </script>
-
+    
+</script>
 
 </body>
 </html>
