--- a/MicroBlog.React/view.html
+++ b/MicroBlog.React/view.html
@@ -73,5 +73,21 @@
 
     </script>
 
+    <div class="container">
+        <div class="row">
+            <script id="echochamber">
+                var EchoChamber = window.EchoChamber || {};
+                (function () {
+                    EchoChamber.discussionURL = window.location;
+                    var script = document.createElement('script');
+                    script.src = 'https://s3.amazonaws.com/echochamberjs/dist/main.js';
+                    script.async = true;
+                    var entry = document.getElementById('echochamber');
+                    entry.parentNode.insertBefore(script, entry);
+                })();
+            </script>
+        </div>
+    </div>
+
 </body>
 </html>
