--- a/MicroBlog.React/edit.html
+++ b/MicroBlog.React/edit.html
@@ -15,50 +15,21 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 
     <link rel="stylesheet" href="/css/bloglist.css">
+
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/medium-editor/5.5.4/js/medium-editor.min.js"></script>
+    <link rel="stylesheet" href="//cdn.jsdelivr.net/medium-editor/latest/css/medium-editor.min.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
 
     <div id="blog"></div>
 
-<script type="text/jsx">
+    <script type="text/jsx">
 
         var Item = React.createClass({
-            loadData: function() {
-                var urlParams;
-                (window.onpopstate = function () {
-                    var match,
-                    pl = /\+/g,  // Regex for replacing addition symbol with a space
-                    search = /([^&=]+)=?([^&]*)/g,
-                    decode = function (s) { return decodeURIComponent(s.replace(pl, " ")); },
-                    query = window.location.search.substring(1);
-
-                    urlParams = {};
-                    while (match = search.exec(query))
-                    urlParams[decode(match[1])] = decode(match[2]);
-                })();
-
-                $.ajax({
-                    url: "api/" + urlParams["id"],
-                    dataType: 'json',
-                    cache: false,
-                    success: function(data) {
-                        this.setState({data: data});
-                    }.bind(this),
-                    error: function(xhr, status, err) {
-                        console.error(this.props.url, status, err.toString());
-                    }.bind(this)
-                });
-            },
-            getInitialState: function() {
-                return { data: {} };
-            },
-            componentDidMount: function() {
-                this.loadData();
-            },
             render: function() {
                 return (
                 <div className="container">
-                    <BlogEdit data={this.state.data} />
+                    <BlogEdit />
                 </div>
                 );
             }
@@ -68,7 +39,50 @@
             <Item />,
             document.getElementById('blog')
         );
+    
+    </script>
 
+    <script type="text/javascript"> 
+
+    $(document).ready(function () {
+        var request;
+
+        $("#blogpostform").submit(function(event) {
+            event.preventDefault();
+            if (request) {
+                request.abort();
+            }
+
+            var sendInfo = {
+                Id: id,
+                Title: $('#title').val(),
+                Content: $('.editor').html()
+            }
+
+            console.log(sendInfo);
+
+            request = $.ajax({
+                beforeSend: function(xhr) { xhr.setRequestHeader("Authorization", "Basic " + btoa("microblog" + ":" + "microblog")); },
+                type: "PUT",
+                url: "/api/" + id,
+                dataType: "json",
+                contentType: "application/json;charset=utf-8",
+                success: function(msg) {
+                    if (msg) {
+                        window.location.replace('/view.html?id=' + id);
+                    } else {
+                        console.log("No api response!");
+                    }
+                },
+                data: JSON.stringify(sendInfo)
+            });
+
+            // Callback handler that will be called on failure
+            request.fail(function (jqXHR, textStatus, errorThrown) {
+                console.error("The following error occurred: " + textStatus, errorThrown );
+            });
+        });
+    });
     </script>
 </body>
 </html>
