--- a/MicroBlog.React/edit.html
+++ b/MicroBlog.React/edit.html
@@ -23,66 +23,66 @@
 
     <div id="blog"></div>
 
-    <script type="text/jsx">
+<script type="text/jsx">
 
         var Item = React.createClass({
-            render: function() {
-                return (
-                <div className="container">
-                    <BlogEdit />
-                </div>
-                );
-            }
+        render: function() {
+            return (
+            <div className="container">
+                <BlogEdit />
+            </div>
+            );
+        }
         });
 
         React.render(
             <Item />,
-            document.getElementById('blog')
+            document.getElementById('blog') 
         );
-    
+
     </script>
 
-    <script type="text/javascript"> 
+    <script type="text/javascript">
 
-    $(document).ready(function () {
-        var request;
+        $(document).ready(function () {
+            var request;
 
-        $("#blogpostform").submit(function(event) {
-            event.preventDefault();
-            if (request) {
-                request.abort();
-            }
+            $("#blogpostform").submit(function (event) {
+                event.preventDefault();
+                if (request) {
+                    request.abort();
+                }
 
-            var sendInfo = {
-                Id: id,
-                Title: $('#title').val(),
-                Content: $('.editor').html()
-            }
+                var sendInfo = {
+                    Id: id, // TODO : Where does this come from now?
+                    Title: $('#title').val(),
+                    Content: $('.editor').html()
+                }
 
-            console.log(sendInfo);
+                console.log(sendInfo);
 
-            request = $.ajax({
-                beforeSend: function(xhr) { xhr.setRequestHeader("Authorization", "Basic " + btoa("microblog" + ":" + "microblog")); },
-                type: "PUT",
-                url: "/api/" + id,
-                dataType: "json",
-                contentType: "application/json;charset=utf-8",
-                success: function(msg) {
-                    if (msg) {
-                        window.location.replace('/view.html?id=' + id);
-                    } else {
-                        console.log("No api response!");
-                    }
-                },
-                data: JSON.stringify(sendInfo)
-            });
+                request = $.ajax({
+                    beforeSend: function (xhr) { xhr.setRequestHeader("Authorization", "Basic " + btoa("microblog" + ":" + "microblog")); },
+                    type: "PUT",
+                    url: "/api/" + id,
+                    dataType: "json",
+                    contentType: "application/json;charset=utf-8",
+                    success: function (msg) {
+                        if (msg) {
+                            window.location.replace('/view.html?id=' + id);
+                        } else {
+                            console.log("No api response!");
+                        }
+                    },
+                    data: JSON.stringify(sendInfo)
+                });
 
-            // Callback handler that will be called on failure
-            request.fail(function (jqXHR, textStatus, errorThrown) {
-                console.error("The following error occurred: " + textStatus, errorThrown );
+                // Callback handler that will be called on failure
+                request.fail(function (jqXHR, textStatus, errorThrown) {
+                    console.error("The following error occurred: " + textStatus, errorThrown);
+                });
             });
         });
-    });
     </script>
 </body>
 </html>
